fix: Swagger document code optimizations
