# storage/api-docs/api-docs.json
@@ -11,10 +11,9 @@
                 "tags": [
                     "Authentication"
                 ],
-                "summary": "Register a new user",
+                "summary": "Register user",
                 "operationId": "e6820a70bd152640eefa0af0016b3d3b",
                 "requestBody": {
-                    "required": true,
                     "content": {
                         "application/json": {
                             "schema": {
@@ -26,20 +25,19 @@
                                 ],
                                 "properties": {
                                     "name": {
-                                        "type": "string",
-                                        "example": "John Doe"
+                                        "type": "string"
                                     },
                                     "email": {
                                         "type": "string",
-                                        "example": "john.doe@example.com"
+                                        "format": "email"
                                     },
                                     "password": {
                                         "type": "string",
-                                        "example": "password"
+                                        "format": "password"
                                     },
                                     "password_confirmation": {
                                         "type": "string",
-                                        "example": "password"
+                                        "format": "password"
                                     }
                                 },
                                 "type": "object"
@@ -49,43 +47,7 @@
                 },
                 "responses": {
                     "201": {
-                        "description": "User registered successfully",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "user": {
-                                            "properties": {
-                                                "id": {
-                                                    "type": "integer",
-                                                    "example": 1
-                                                },
-                                                "name": {
-                                                    "type": "string",
-                                                    "example": "John Doe"
-                                                },
-                                                "email": {
-                                                    "type": "string",
-                                                    "example": "john.doe@example.com"
-                                                },
-                                                "created_at": {
-                                                    "type": "string",
-                                                    "format": "date-time",
-                                                    "example": "2024-01-01T00:00:00Z"
-                                                },
-                                                "updated_at": {
-                                                    "type": "string",
-                                                    "format": "date-time",
-                                                    "example": "2024-01-01T00:00:00Z"
-                                                }
-                                            },
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
+                        "description": "User created"
                     }
                 }
             }
@@ -95,10 +57,9 @@
                 "tags": [
                     "Authentication"
                 ],
-                "summary": "Login an existing user",
+                "summary": "User login",
                 "operationId": "bab3fbc2592f5537c990acc6071592fa",
                 "requestBody": {
-                    "required": true,
                     "content": {
                         "application/json": {
                             "schema": {
@@ -109,11 +70,11 @@
                                 "properties": {
                                     "email": {
                                         "type": "string",
-                                        "example": "john.doe@example.com"
+                                        "format": "email"
                                     },
                                     "password": {
                                         "type": "string",
-                                        "example": "password"
+                                        "format": "password"
                                     }
                                 },
                                 "type": "object"
@@ -123,20 +84,7 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "User logged in successfully",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "token": {
-                                            "type": "string",
-                                            "example": "example.jwt.token"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
+                        "description": "Login successful"
                     }
                 }
             }
@@ -146,24 +94,11 @@
                 "tags": [
                     "Authentication"
                 ],
-                "summary": "Logout the authenticated user",
+                "summary": "Logout user",
                 "operationId": "1a307e1f34681659d83cf736528e39aa",
                 "responses": {
                     "200": {
-                        "description": "User logged out successfully",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Logged out successfully."
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
+                        "description": "Logged out"
                     }
                 },
                 "security": [
@@ -178,11 +113,9 @@
                 "tags": [
                     "Profile"
                 ],
-                "summary": "Update user profile",
-                "description": "Update user profile.",
+                "summary": "Update profile",
                 "operationId": "c51fbed1f6c7fc462c5b6d403a3d86d2",
                 "requestBody": {
-                    "required": true,
                     "content": {
                         "application/json": {
                             "schema": {
@@ -192,12 +125,11 @@
                                 ],
                                 "properties": {
                                     "name": {
-                                        "type": "string",
-                                        "example": "John Doe"
+                                        "type": "string"
                                     },
                                     "email": {
                                         "type": "string",
-                                        "example": "john.doe@example.com"
+                                        "format": "email"
                                     }
                                 },
                                 "type": "object"
@@ -207,43 +139,7 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Profile updated successfully",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "user": {
-                                            "properties": {
-                                                "id": {
-                                                    "type": "integer",
-                                                    "example": 1
-                                                },
-                                                "name": {
-                                                    "type": "string",
-                                                    "example": "John Doe"
-                                                },
-                                                "email": {
-                                                    "type": "string",
-                                                    "example": "john.doe@example.com"
-                                                },
-                                                "created_at": {
-                                                    "type": "string",
-                                                    "format": "date-time",
-                                                    "example": "2024-01-01T00:00:00Z"
-                                                },
-                                                "updated_at": {
-                                                    "type": "string",
-                                                    "format": "date-time",
-                                                    "example": "2024-01-01T00:00:00Z"
-                                                }
-                                            },
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
+                        "description": "Profile updated"
                     }
                 },
                 "security": [
@@ -256,25 +152,11 @@
                 "tags": [
                     "Profile"
                 ],
-                "summary": "Delete user account",
-                "description": "Delete user account.",
+                "summary": "Delete account",
                 "operationId": "20089ee93b0a8a762d05b2350e85590f",
                 "responses": {
                     "200": {
-                        "description": "Account deleted successfully",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Account deleted successfully."
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
+                        "description": "Account deleted"
                     }
                 },
                 "security": [
